[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/ICED/textures/dialogueBoxOrigin.png" type="Texture" id=1]
[ext_resource path="res://addons/ICED/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://addons/ICED/textures/dialogueBoxBox.png" type="Texture" id=3]

[node name="DialogueBox" type="Node2D"]
script = ExtResource( 2 )

[node name="BoxOrigin" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="BoundingBox" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -43.0
margin_top = -81.0
margin_right = 44.0
margin_bottom = -16.0
text = "What the fuck did you do you idiot"
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxBG" type="NinePatchRect" parent="BoundingBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="RichTextLabel" parent="BoundingBox/BoxBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
bbcode_enabled = true
fit_content_height = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueSound" type="AudioStreamPlayer" parent="."]
